--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@electron/remote": "^2.0.8",
     "@quasar/extras": "^1.15.3",
     "axios": "^0.21.1",
+    "electron-log": "^4.4.8",
+    "electron-updater": "^5.2.1",
     "pinia": "^2.0.11",
     "quasar": "^2.8.2",
     "vue": "^3.0.0",
