--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "electron-test",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "A Quasar Project",
   "productName": "Quasar App",
   "author": "Lakshitha Elapatha <lakshitha.elapatha@mjhudson.com>",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "publish": "electron-builder --win -p always"
   },
   "dependencies": {
     "@electron/remote": "^2.0.8",
@@ -27,6 +28,7 @@
     "@typescript-eslint/parser": "^5.10.0",
     "autoprefixer": "^10.4.2",
     "electron": "^20.1.0",
+    "electron-builder": "^22.4.0",
     "eslint": "^8.10.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
