--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
-    "publish": "electron-builder --win -p always"
+    "publish": "electron-builder --win -p always",
+    "release": "release-it"
   },
   "dependencies": {
     "@electron/remote": "^2.0.8",
@@ -35,6 +36,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.0.0",
+    "release-it": "^15.4.2",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.5.4"
   },
